@@ -4,7 +4,10 @@ import kr.eolmago.domain.entity.deal.Deal;
 import kr.eolmago.domain.entity.deal.enums.DealStatus;
 import kr.eolmago.domain.entity.review.Review;
 import kr.eolmago.domain.entity.user.User;
+import kr.eolmago.dto.api.review.request.ReviewCreateRequest;
 import kr.eolmago.dto.view.review.ReviewResponse;
+import kr.eolmago.global.exception.BusinessException;
+import kr.eolmago.global.exception.ErrorCode;
 import kr.eolmago.repository.deal.DealRepository;
 import kr.eolmago.repository.review.ReviewRepository;
 import kr.eolmago.repository.user.UserRepository;
@@ -14,8 +17,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+/**
+ * 리뷰 서비스
+ */
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -26,113 +31,107 @@ public class ReviewService {
     private final UserRepository userRepository;
 
     /**
-     * 구매자가 완료된 거래에 대해 판매자에게 리뷰를 작성하는 메서드.
+     * 리뷰 생성
+     *
+     * - 거래 상태가 COMPLETED 인 경우에만 작성 가능
+     * - 이미 해당 거래에 대해 동일한 작성자 역할(구매자/판매자)의 리뷰가 있으면 예외(필요 시 추가)
      */
     @Transactional
     public ReviewResponse createReview(
             Long dealId,
-            UUID userId,
-            int rating,
-            String content
+            UUID reviewerId,
+            ReviewCreateRequest request
     ) {
-        if (rating < 1 || rating > 5) {
-            throw new IllegalArgumentException("평점은 1에서 5 사이여야 합니다.");
-        }
-
+        // 거래 조회
         Deal deal = dealRepository.findById(dealId)
-                .orElseThrow(() -> new IllegalArgumentException("거래를 찾을 수 없습니다."));
+                .orElseThrow(() -> new BusinessException(ErrorCode.DEAL_NOT_FOUND));
 
-        // 완료된 거래만 리뷰 작성 가능
+        // 거래 상태 검증: 완료가 아니면 리뷰 불가
         if (deal.getStatus() != DealStatus.COMPLETED) {
-            throw new IllegalStateException("완료된 거래에만 리뷰를 작성할 수 있습니다.");
+            // TODO: ErrorCode에 REVIEW_NOT_ALLOWED 같은 코드가 생기면 교체
+            throw new BusinessException(ErrorCode.DEAL_UNAUTHORIZED);
         }
 
-        if (deal.getBuyer() == null || deal.getBuyer().getUserId() == null) {
-            throw new IllegalStateException("구매자 정보가 없습니다.");
-        }
-        if (deal.getSeller() == null || deal.getSeller().getUserId() == null) {
-            throw new IllegalStateException("판매자 정보가 없습니다.");
-        }
+        // 사용자 조회
+        User seller = userRepository.findById(deal.getSeller().getUserId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+        User buyer = userRepository.findById(deal.getBuyer().getUserId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        // 현재 로그인 유저가 이 거래의 구매자인지 검증
-        if (!deal.getBuyer().getUserId().equals(userId)) {
-            throw new IllegalArgumentException("해당 거래의 구매자만 리뷰를 작성할 수 있습니다.");
-        }
-
-        // 동일 거래에 동일 구매자가 이미 리뷰 작성했는지 체크
-        List<Review> existing = reviewRepository.findByDeal_DealId(dealId);
-        boolean alreadyExists = existing.stream()
-                .anyMatch(review -> review.getBuyer() != null
-                        && userId.equals(review.getBuyer().getUserId()));
-
-        if (alreadyExists) {
-            throw new IllegalStateException("이미 이 거래에 대한 리뷰를 작성하였습니다.");
+        // 내가 이 거래의 참여자인지 검증
+        if (!seller.getUserId().equals(reviewerId) && !buyer.getUserId().equals(reviewerId)) {
+            // TODO: 나중에 REVIEW_NOT_ALLOWED 같은 에러 코드로 분리 가능
+            throw new BusinessException(ErrorCode.DEAL_UNAUTHORIZED);
         }
 
-        // User 엔티티 로드 (일관성 및 지연 로딩 방지)
-        User buyer = userRepository.findByUserId(deal.getBuyer().getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("구매자 회원 정보를 찾을 수 없습니다."));
-        User seller = userRepository.findByUserId(deal.getSeller().getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("판매자 회원 정보를 찾을 수 없습니다."));
+        // 평점 (int)
+        int rating = request.rating();
 
         Review review = Review.create(
                 deal,
                 seller,
                 buyer,
-                (short) rating,
-                content
+                rating,
+                request.content()
         );
 
         Review saved = reviewRepository.save(review);
         return ReviewResponse.from(saved);
     }
 
-    public ReviewResponse getReview(Long reviewId) {
-        Review review = findReviewById(reviewId);
+    /**
+     * 특정 리뷰 단건 조회
+     */
+    public ReviewResponse getReview(Long reviewId, UUID userId) {
+        Review review = reviewRepository.findById(reviewId)
+                // TODO: ErrorCode에 REVIEW_NOT_FOUND가 생기면 교체
+                .orElseThrow(() -> new BusinessException(ErrorCode.DEAL_NOT_FOUND));
+
+        // 필요 시 권한 검증 추가 가능
+        // if (!review.getSeller().getUserId().equals(userId)
+        //         && !review.getBuyer().getUserId().equals(userId)) {
+        //     throw new BusinessException(ErrorCode.DEAL_UNAUTHORIZED);
+        // }
+
         return ReviewResponse.from(review);
     }
 
-    public List<ReviewResponse> getAllReviews() {
-        return reviewRepository.findAll().stream()
-                .map(ReviewResponse::from)
-                .collect(Collectors.toList());
-    }
-
-    public List<ReviewResponse> getReviewsBySeller(UUID sellerId) {
-        List<Review> reviews = reviewRepository.findBySeller_UserId(sellerId);
-        return reviews.stream()
-                .map(ReviewResponse::from)
-                .collect(Collectors.toList());
-    }
-
+    /**
+     * 내가 구매자로 참여한 거래들에 대한 리뷰 목록 조회
+     */
     public List<ReviewResponse> getReviewsByBuyer(UUID buyerId) {
-        List<Review> reviews = reviewRepository.findByBuyer_UserId(buyerId);
-        return reviews.stream()
+        return reviewRepository.findByBuyer_UserId(buyerId)
+                .stream()
                 .map(ReviewResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * 내가 판매자로 참여한 거래들에 대한 리뷰 목록 조회
+     */
+    public List<ReviewResponse> getReviewsBySeller(UUID sellerId) {
+        return reviewRepository.findBySeller_UserId(sellerId)
+                .stream()
+                .map(ReviewResponse::from)
+                .toList();
+    }
+
+    /**
+     * 리뷰 삭제
+     */
     @Transactional
     public void deleteReview(Long reviewId, UUID userId) {
-        Review review = findReviewById(reviewId);
+        Review review = reviewRepository.findById(reviewId)
+                // TODO: ErrorCode에 REVIEW_NOT_FOUND가 생기면 교체
+                .orElseThrow(() -> new BusinessException(ErrorCode.DEAL_NOT_FOUND));
 
-        boolean isSeller = review.getSeller() != null
-                && review.getSeller().getUserId() != null
-                && review.getSeller().getUserId().equals(userId);
-
-        boolean isBuyer = review.getBuyer() != null
-                && review.getBuyer().getUserId() != null
-                && review.getBuyer().getUserId().equals(userId);
-
-        if (!isSeller && !isBuyer) {
-            throw new IllegalArgumentException("리뷰를 삭제할 권한이 없습니다.");
+        // 작성자(구매자 또는 판매자)만 삭제 가능
+        if (!review.getBuyer().getUserId().equals(userId)
+                && !review.getSeller().getUserId().equals(userId)) {
+            // TODO: 나중에 REVIEW_NOT_ALLOWED 같은 코드로 교체 가능
+            throw new BusinessException(ErrorCode.DEAL_UNAUTHORIZED);
         }
 
         reviewRepository.delete(review);
-    }
-
-    private Review findReviewById(Long reviewId) {
-        return reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다."));
     }
 }
